# xmlconf

./: .gitignore  Makefile.am  bootstrap  configure.ac
m4/: expat.m4
src/: Makefile.am  xmlconf.c  xmlconf.cpp
srclib/zlib/: Makefile.am  bootstrap  configure.ac
xmlconf/: configure.ac
